--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<div th:replace="/fragments/header :: header"> </div>
+	<div th:replace="fragments/header :: header"> </div>
 
 	<div class="container">
 		<div class="text-center row header">
